--- a/frontend/web/statics/css/site.css
+++ b/frontend/web/statics/css/site.css
@@ -103,3 +103,8 @@ a.desc:after {
 .nav > li > form > button:hover {
     text-decoration: none;
 }
+.avatar_style{
+    width: 35px;
+    float: left;
+    margin-top: -7px;
+}
